--- a/views/login.html
+++ b/views/login.html
@@ -29,9 +29,10 @@
 
             <div class="card">
               <div class="card-image">
-                <img src="resources/images.jpg">
+                <!--<img src="resources/images.jpg">-->
+				<img src="">
                 <span class="card-title">
-                  <h2>Cake's</h2>
+                  <h2>Maracabarro</h2>
                 </span>
               </div>
 
@@ -49,11 +50,11 @@
               </div>
 
             <div class="card-action">
-              <button type="submit" class="waves-effect btn red lighten-1">Login</button>
+              <button type="submit" class="waves-effect btn deep-orange">Login</button>
 
 				<div class="right">
-					<a href="#/cadastro" class="waves-effect btn brown darken-1 hide-on-med-and-down">Registrar</a>
-					<a href="#/esqueceuSenha" class="waves-effect btn brown darken-1 hide-on-med-and-down">Esqueci a senha</a>
+					<a href="#/cadastro" class="waves-effect btn orange darken-1 hide-on-med-and-down">Registrar</a>
+					<a href="#/esqueceuSenha" class="waves-effect btn orange darken-1 hide-on-med-and-down">Esqueci a senha</a>
 				</div>
             </div>
           </div>
