--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -24,7 +24,8 @@
 
             <div class="card">
               <div class="card-image">
-                <img src="resources/images.jpg">
+                <!--<img src="resources/images.jpg">-->
+                <img src="">
                 <span class="card-title">
                   <h2>Cake's</h2>
                 </span>
