--- a/views/esqueceuSenha.html
+++ b/views/esqueceuSenha.html
@@ -22,7 +22,8 @@
 
             <div class="card">
               <div class="card-image">
-                <img src="resources/images.jpg">
+                <img src="">
+				<!--<img src="resources/images.jpg">-->
                 <span class="card-title">
                   <h2>Cake's</h2>
                 </span>
