--- a/views/esqueceuSenha.html
+++ b/views/esqueceuSenha.html
@@ -22,10 +22,10 @@
 
             <div class="card">
               <div class="card-image">
-                <img src="">
-				<!--<img src="resources/images.jpg">-->
+                <img src="resources/maracabarro2.png">
+								<!--<img src="resources/images.jpg">-->
                 <span class="card-title">
-                  <h2>Cake's</h2>
+                  <h2>Maracabarro</h2>
                 </span>
               </div>
 
