--- a/views/login.html
+++ b/views/login.html
@@ -24,13 +24,13 @@
 	<main>
     <div class="container">
       <div class="row">
-        <div class="col s12 m12 l8 offset-l2">
+        <div class="col s12 m12 l7 offset-l2">
           <form ng-submit="logar(usuario)">
 
             <div class="card">
               <div class="card-image">
                 <!--<img src="resources/images.jpg">-->
-				<img src="">
+								<img src="resources/maracabarro2.png">
                 <span class="card-title">
                   <h2>Maracabarro</h2>
                 </span>
@@ -52,16 +52,15 @@
             <div class="card-action">
               <button type="submit" class="waves-effect btn deep-orange">Login</button>
 
-				<div class="right">
-					<a href="#/cadastro" class="waves-effect btn orange darken-1 hide-on-med-and-down">Registrar</a>
-					<a href="#/esqueceuSenha" class="waves-effect btn orange darken-1 hide-on-med-and-down">Esqueci a senha</a>
-				</div>
+							<div class="right">
+								<a href="#/cadastro" class="waves-effect btn orange darken-1 hide-on-med-and-down">Registrar</a>
+								<a href="#/esqueceuSenha" class="waves-effect btn orange darken-1 hide-on-med-and-down">Esqueci a senha</a>
+							</div>
+
             </div>
           </div>
         </form>
       </div>
-    </div>
-  </div>
 
   <div class="fixed-action-btn horizontal hide-on-large-only" style="bottom: 15px; right: 15px;">
     <a class="btn-floating btn-large red darken-1">
