--- a/views/alterarSenha.html
+++ b/views/alterarSenha.html
@@ -24,9 +24,9 @@
             <div class="card">
               <div class="card-image">
                 <!--<img src="resources/images.jpg">-->
-				<img src="">
+								<img src="resources/maracabarro2.png">
                 <span class="card-title">
-                  <h2>Cake's</h2>
+                  <h2>Maracabarro</h2>
                 </span>
               </div>
 
