--- a/views/principal.html
+++ b/views/principal.html
@@ -1,9 +1,11 @@
 <div ng-controller="principalCtrl">
+
 	<script>
 		$(document).ready(function(){
 			$(".button-collapse").sideNav({closeOnClick: true});
 			$('.collapsible').collapsible();
 		});
+
 	</script>
 
 	<!-- header -->
@@ -26,8 +28,8 @@
 					<div class="nav-wrapper">
 						<a href="#/todos" class="brand-logo">Maracabarro</a>
 						<ul class="right hide-on-med-and-down">
-							<li class="active"><a href="#/todos">Todas</a></li>
-							<li><a href="#/minhas">Minhas Cucas</a></li>
+							<li><a href="#/todos">Todas</a></li>
+							<li><a href="#/minhas">Teste</a></li>
 							<li><a href="#/login">Sair</a></li>
 						</ul>
 					</div>
@@ -73,7 +75,7 @@
 			<div class="row">
 				<div class="col s12 m6 l6">
 					<h4 class="white-text">Maracabarro</h4>
-					<p class="white-text">Aproveite para divulgar suas cucas na sua empresa, casa, sítio, etc. Não esqueça de marcar sua cuca no dia de seu aniversário, colabore!</p>
+					<p class="white-text">Rodapé - Rodapé - Rodapé - Rodapé - Rodapé - Rodapé - Rodapé - Rodapé</p>
 				</div>
 			</div>
 		</div>
