--- a/views/usuario/cadastro.html
+++ b/views/usuario/cadastro.html
@@ -56,10 +56,10 @@
 
             <div class="card-action">
 
-              <a href="#/login" class="waves-effect btn brown darken-1"><i class="material-icons prefix">arrow_back</i></a>
+              <a href="#/login" class="waves-effect btn orange darken-3"><i class="material-icons prefix">arrow_back</i></a>
 
               <div class="right">
-                <button type="submit" class="waves-effect btn red lighten-1">Confirmar</button>
+                <button type="submit" class="waves-effect btn deep-orange darken-4">Confirmar</button>
               </div>
             </div>
 
