--- a/views/principal.html
+++ b/views/principal.html
@@ -10,19 +10,28 @@
 
 	<!-- header -->
 	<header class="no-select">
+
+		<ul id="dropdown1" class="dropdown-content">
+		  <li><a href="#!">one</a></li>
+		  <li><a href="#!">two</a></li>
+		  <li class="divider"></li>
+		  <li><a href="#!">three</a></li>
+		</ul>
+
 		<nav>
 			<a href="" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
 			<ul id="slide-out" class="side-nav">
-				<li><i class="material-icons">power_settings_new</i><a href="#/todos">Histórico de Jogos</a></li>
-				<li><a href="#/todos">Calendário</a></li>
-				<li><a href="#/todos">Finanças</a></li>
-				<li><a href="#/todos">Comunicados</a></li>
-				<li><a href="#/todos">Eventos</a></li>
-				<li><a href="#/todos">Configuração</a></li>
-				<li><a href="#/todos">Conta</a></li>
-				<li><a href="#/todos">Sair</a></li>
-
+				<li><a href="#/jogo/historicoJogos" id="historico">Histórico de Jogos</a></li>
+				<label for="historico"><i class="material-icons">search</i></label>
+				<li><a href="#/gerenciamento/calendario">Calendário</a></li>
+				<li><a href="#/gerenciamento/financas">Finanças</a></li>
+				<li><a href="#/gerenciamento/comunicados">Comunicados</a></li>
+				<li><a href="#/gerenciamento/eventos">Eventos</a></li>
+				<li><a href="#/configuracao/app">Configuração</a></li>
+				<li><a href="#/configuracao/conta">Conta</a></li>
+				<li><a href="#/sair">Sair</a></li>
 			</ul>
+
 			<div class="orange accent-4">
 				<div class="container">
 					<div class="nav-wrapper">
@@ -31,6 +40,7 @@
 							<li><a href="#/todos">Todas</a></li>
 							<li><a href="#/minhas">Teste</a></li>
 							<li><a href="#/login">Sair</a></li>
+							<li><a class="dropdown-button" href="#!" data-activates="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -46,18 +56,18 @@
 		<div class="container">
 			<div class="row">
 				<!-- Cards -->
-				<div class="col s12 m6 l3" ng-repeat="cuca in cucas">
+				<div class="col s12 m6 l3" ng-repeat="jogo in jogos">
 					<div class="card">
 						<div class="card-image no-select">
 							<!--<img src="resources/cakes0.png" height="250px">-->
 							<img src="" height="250px">
-							<span class="card-title white-text">{{cuca.titulo}}</span>
+							<span class="card-title white-text">{{jogo.descricao}}</span>
 						</div>
 						<div class="card-content">
-							<p>{{cuca.descricao}}</p>
+							<p>{{jogo.descricao}}</p>
 							<br>
-							<p>Data: {{cuca.data}}</p>
-							<p>Preço: {{cuca.preco}}</p>
+							<p>Data: {{jogo.data}}</p>
+							<p>Local: {{jogo.local}}</p>
 						</div>
 						<div class="card-action no-select">
 							<a href="#">PARTICIPAR</a>
