--- a/views/usuario/esqueceuSenha.html
+++ b/views/usuario/esqueceuSenha.html
@@ -23,7 +23,6 @@
             <div class="card">
               <div class="card-image">
                 <img src="resources/maracabarro2.png">
-								<!--<img src="resources/images.jpg">-->
                 <span class="card-title">
                   <h2>Maracabarro</h2>
                 </span>
@@ -38,9 +37,9 @@
               </div>
 
             <div class="card-action">
-				<a href="#/login" class="waves-effect btn brown darken-1"><i class="material-icons prefix">arrow_back</i></a>
-				<div class="right">
-                	<button type="submit" class="waves-effect btn red lighten-1">Enviar email</button>
+								<a href="#/login" class="waves-effect btn orange darken-3"><i class="material-icons prefix">arrow_back</i></a>
+								<div class="right">
+                	<button type="submit" class="waves-effect btn deep-orange darken-4">Enviar email</button>
               	</div>
             </div>
 
@@ -50,6 +49,4 @@
     </div>
   </div>
 </main>
-
-	<script type="text/javascript" src="js/datapicker.js"></script>
 </div>
